[project]
name = "esm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.26.0",
    "datasets>=3.2.0",
    "fire>=0.7.0",
    "pandas>=2.2.3",
    "pyrootutils>=1.0.4",
    "ruff>=0.8.4",
    "torch>=2.5.1",
    "transformers>=4.47.1",
]
